test/frontend/fail/unknown_field.osl
struct S {
    int a, b;
};

shader test() {
    S s = S(1, 2);
    s.c;
}
